--- a/mapping.json
+++ b/mapping.json
@@ -1,142 +1,32 @@
-curl -XPUT 'localhost:9200/policenew' -d'{
-  "police" : {
-    "mappings" : {
-      "data" : {
-        "properties" : {
-          "@timestamp" : {
-            "type" : "date"
-          },
-          "@version" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "at_scene_time" : {
-            "type" : "date"
-          },
-          "cad_cdw_id" : {
-            "type" : "long"
-          },
-          "cad_event_number" : {
-            "type" : "long"
-          },
-          "census_tract" : {
-            "type" : "float"
-          },
-          "district_sector" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "event_clearance_code" : {
-            "type" : "long"
-          },
-          "event_clearance_date" : {
-            "type" : "date"
-          },
-          "event_clearance_description" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "event_clearance_group" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "event_clearance_subgroup" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "general_offense_number" : {
-            "type" : "long"
-          },
-          "hundred_block_location" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "initial_type_description" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "initial_type_group" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "initial_type_subgroup" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          },
-          "latitude" : {
-            "type": "float" {
-              "properties": {
-                "location": {
-                  "type": "geo_point"
-                }
-              }
-            }
-          },
-          "longitude" : {
-            "type": "float" {
-              "properties": {
-                "location": {
-                  "type": "geo_point"
-                }
-              }
-            }
-          }
-          "zone_beat" : {
-            "type" : "text",
-            "fields" : {
-              "keyword" : {
-                "type" : "keyword",
-                "ignore_above" : 256
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
+curl -XPUT 'localhost:9200/policenew' -d'
+> {
+>   "template" : "policenew",
+>     "mappings" : { 
+>       "data" : {
+>         "properties" : { 
+>           "@timestamp" : { "type" : "date"},
+>           "@version" : { "type" : "integer"}, 
+>           "at_scene_time" : { "type" : "date"},
+>           "cad_cdw_id" : { "type" : "string"},
+>           "cad_event_number" : { "type" : "string"},
+>           "census_tract" : { "type" : "string"},
+>           "district_sector" : { "type" : "string"},
+>           "event_clearance_code" : { "type" : "string"},
+>           "event_clearance_date" : { "type" : "date"},
+>           "event_clearance_description" : { "type" : "string"},
+>           "event_clearance_group" : { "type" : "string"},
+>           "event_clearance_subgroup" : { "type" : "string"},
+>           "general_offense_number" : { "type" : "string"},
+>           "hundred_block_location" : { "type" : "string"},
+>           "initial_type_description" : { "type" : "string"},
+>           "initial_type_group" : { "type" : "string"},
+>           "initial_type_subgroup" : { "type" : "string"},
+>           "latitude" : { "type" : "geo_point"},
+>           "longitude" : { "type": "geo_point"},
+>           "zone_beat" : { "type" : "string"}
+>         }
+>       }
+>     }
+>   }
+> }
+> '
